--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# While in development, update is OK. Swith to none after you hit PROD.
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xml_doc_library
+spring.datasource.username=xml_doc_user
+spring.datasource.password=Se$curePas@@word
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
