--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xml_doc_library
 spring.datasource.username=xml_doc_user
 spring.datasource.password=Se$curePas@@word
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Limits to files that can be uploaded.
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+
+# Where to store XML files.
+storage.location=xml-files
+
+# Logging.
+logging.level.root=INFO
+logging.level.com.rob.ceuploadxml=INFO
