--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Where to store XML files.
+storage.location=target/test-classes/xml-files
+
+# Logging.
+logging.level.root=INFO
+logging.level.com.rob.ceuploadxml=DEBUG
+
+logging.level.org.springframework.web=TRACE
