--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ storage.location=xml-files
 
 # Logging.
 logging.level.root=INFO
-logging.level.com.rob.ceuploadxml=INFO
+logging.level.com.rob.ceuploadxml=DEBUG
+
+logging.level.org.springframework.web=TRACE
